fix component toggle dark Mode

--- a/react-full/src/style/index.scss
+++ b/react-full/src/style/index.scss
@@ -15,6 +15,15 @@ todo:  DARK MODE
    background-color: $light-bg;
    color: $light-color;
 }
+.rfc-dark-mode {
+   img {
+      height: 25px;
+   }
+   button {
+      background-color: transparent;
+      border: none;
+   }
+}
 /* *************************************************
 ? ************** STILE DEL COMPONENTE***************
 todo:  FORM
